# cpr-example

./: CMakeLists.txt
inc/: Job.hpp  Order.hpp  Orderbook.hpp  pimpl.hpp
inc/exchange/: Bittrex.hpp  Exchange.hpp  HttpExchange.hpp  Poloniex.hpp
inc/impl/: JobImpl.hpp
inc/impl/exchange/: BittrexImpl.hpp  ExchangeImpl.hpp  HttpExchangeImpl.hpp  PoloniexImpl.hpp
inc/impl/strategy/: BlockingStrategyImpl.hpp  FrequencyStrategyImpl.hpp  NonblockingStrategyImpl.hpp
inc/strategy/: BlockingStrategy.hpp  FrequencyStrategy.hpp  NonblockingStrategy.hpp  Strategy.hpp
opt/: CMakeLists.txt
src/: Job.cpp  Order.cpp  example.cpp
src/exchange/: Bittrex.cpp  Exchange.cpp  HttpExchange.cpp  Poloniex.cpp
src/impl/: JobImpl.cpp
src/impl/exchange/: BittrexImpl.cpp  ExchangeImpl.cpp  HttpExchangeImpl.cpp  PoloniexImpl.cpp
src/impl/strategy/: BlockingStrategyImpl.cpp  FrequencyStrategyImpl.cpp  NonblockingStrategyImpl.cpp
src/strategy/: BlockingStrategy.cpp  FrequencyStrategy.cpp  NonblockingStrategy.cpp
